@@ -120,8 +120,8 @@ class SimplifyChainedAssertJAssertionsTest implements RewriteTest {
             String finalArgument = firstArg.isEmpty() && !"0".equals(secondArg) ? secondArg : firstArg;
             finalArgument = finalArgument.contains(".") ? finalArgument.split("\\.")[0] : finalArgument;
 
-            String before = String.format(template, formattedAssertBefore);
-            String after = String.format(template, assertAfter.formatted(dedicatedAssertion, finalArgument));
+            String before = template.formatted(formattedAssertBefore);
+            String after = template.formatted(assertAfter.formatted(dedicatedAssertion, finalArgument));
 
             rewriteRun(
               java(before, after)
@@ -176,8 +176,8 @@ class SimplifyChainedAssertJAssertionsTest implements RewriteTest {
             String finalArgument = "".equals(firstArg) && !"0".equals(secondArg) ? secondArg : firstArg;
             finalArgument = finalArgument.contains(".") ? finalArgument.split("\\.")[0] : finalArgument;
 
-            String before = String.format(template, formattedAssertBefore);
-            String after = String.format(template, assertAfter.formatted(dedicatedAssertion, finalArgument));
+            String before = template.formatted(formattedAssertBefore);
+            String after = template.formatted(assertAfter.formatted(dedicatedAssertion, finalArgument));
 
             rewriteRun(
               java(before, after)
@@ -220,8 +220,8 @@ class SimplifyChainedAssertJAssertionsTest implements RewriteTest {
             String finalArgument = "".equals(firstArg) && !"0".equals(secondArg) ? secondArg : firstArg;
             finalArgument = finalArgument.contains(".") ? finalArgument.split("\\.")[0] : finalArgument;
 
-            String before = String.format(template, formattedAssertBefore);
-            String after = String.format(template, assertAfter.formatted(dedicatedAssertion, finalArgument));
+            String before = template.formatted(formattedAssertBefore);
+            String after = template.formatted(assertAfter.formatted(dedicatedAssertion, finalArgument));
 
             rewriteRun(
               java(before, after)
@@ -266,8 +266,8 @@ class SimplifyChainedAssertJAssertionsTest implements RewriteTest {
 
             String finalArgument = "".equals(firstArg) ? secondArg : firstArg;
 
-            String before = String.format(template, formattedAssertBefore);
-            String after = String.format(template, assertAfter.formatted(dedicatedAssertion, finalArgument));
+            String before = template.formatted(formattedAssertBefore);
+            String after = template.formatted(assertAfter.formatted(dedicatedAssertion, finalArgument));
 
             rewriteRun(
               java(before, after)
@@ -310,14 +310,14 @@ class SimplifyChainedAssertJAssertionsTest implements RewriteTest {
             String assertAfter = !"".equals(firstArg) && !"".equals(secondArg) ? "assertThat(map).%s(%s, %s);" : "assertThat(map).%s(%s);";
 
             String formattedAssertBefore = assertBefore.formatted(chainedAssertion, firstArg, assertToReplace, secondArg);
-            String before = String.format(template, formattedAssertBefore);
+            String before = template.formatted(formattedAssertBefore);
 
             String finalArgument = "".equals(firstArg) ? secondArg : firstArg;
             List<String> formattedArgs = new ArrayList<>(Arrays.asList(dedicatedAssertion, finalArgument));
             if (!"".equals(firstArg) && !"".equals(secondArg)) {
                 formattedArgs.add(secondArg);
             }
-            String after = String.format(template, assertAfter.formatted(formattedArgs.toArray()));
+            String after = template.formatted(assertAfter.formatted(formattedArgs.toArray()));
 
             rewriteRun(
               java(before, after)
@@ -388,11 +388,11 @@ class SimplifyChainedAssertJAssertionsTest implements RewriteTest {
               }
               """;
 
-            String assertBefore = String.format("assertThat(helloWorld.%s()).%s(%s);", chainedAssertion, assertToReplace, arg);
-            String assertAfter = String.format("assertThat(helloWorld).%s(%s);", dedicatedAssertion, arg);
+            String assertBefore = "assertThat(helloWorld.%s()).%s(%s);".formatted(chainedAssertion, assertToReplace, arg);
+            String assertAfter = "assertThat(helloWorld).%s(%s);".formatted(dedicatedAssertion, arg);
 
-            String before = String.format(template, assertBefore);
-            String after = String.format(template, assertAfter);
+            String before = template.formatted(assertBefore);
+            String after = template.formatted(assertAfter);
 
             rewriteRun(java(before, after));
         }
@@ -428,8 +428,8 @@ class SimplifyChainedAssertJAssertionsTest implements RewriteTest {
 
             String formattedAssertBefore = assertBefore.formatted(chainedAssertion, assertToReplace);
 
-            String before = String.format(template, formattedAssertBefore);
-            String after = String.format(template, assertAfter.formatted(dedicatedAssertion));
+            String before = template.formatted(formattedAssertBefore);
+            String after = template.formatted(assertAfter.formatted(dedicatedAssertion));
 
             rewriteRun(
               java(before, after)
